date added bg modified

--- a/main.css
+++ b/main.css
@@ -14,12 +14,21 @@
 	font-family: "Fira sans", sans-serif;
 }
 
+.curr_date{
+    padding-bottom: 10px;
+    padding-left: 525px;
+    align-items: center;
+}
+
+
 body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
 	color: #FFF;
-	background-color: var(--dark);
+	/* background-color: var(--dark); */
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 header {
